@@ -3,60 +3,60 @@ package com.ant.hurry.boundedContext.notification.service;
 
 import com.ant.hurry.base.rsData.RsData;
 import com.ant.hurry.boundedContext.member.entity.Member;
+import com.ant.hurry.boundedContext.member.repository.MemberRepository;
 import com.ant.hurry.boundedContext.member.service.MemberService;
 import com.ant.hurry.boundedContext.notification.entity.Notification;
-import com.ant.hurry.boundedContext.notification.entity.NotifyType;
 import com.ant.hurry.boundedContext.notification.event.NotifyCancelMessageEvent;
 import com.ant.hurry.boundedContext.notification.event.NotifyEndMessageEvent;
 import com.ant.hurry.boundedContext.notification.event.NotifyNewMessageEvent;
-
 import com.ant.hurry.boundedContext.notification.repository.NotificationRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-
-
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.context.event.ApplicationEvents;
-import org.springframework.test.context.event.RecordApplicationEvents;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertAll;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
 
 @SpringBootTest
 @Transactional
 @ActiveProfiles("test")
-@RecordApplicationEvents
 class NotificationServiceTest {
 
-    @Autowired
+    @Mock
+    MemberService memberService;
+
+    @Mock
+    NotificationRepository notificationRepository;
+
+    @Mock
+    ApplicationEventPublisher publisher;
+
+    @InjectMocks
     private NotificationService notificationService;
 
     @Autowired
-    ApplicationEvents events;
-
-    @MockBean
-    MemberService memberService;
-
-    @MockBean
-    NotificationRepository notificationRepository;
+    MemberRepository memberRepository;
 
     private Member requester;
     private Member helper;
 
     @BeforeEach
     public void setMember() {
-        requester = new Member("손승완", "큰모래", "123", "01012345678", "kakao", 0);
-        helper = new Member("멋쟁이사자", "라이크라이온", "123", "01056781234", "kakao", 0);
+        requester = memberRepository.findByUsername("user1").orElse(null);
+        helper = memberRepository.findByUsername("user2").orElse(null);
     }
 
 
@@ -64,53 +64,33 @@ class NotificationServiceTest {
     @DisplayName("채팅을 시작하면 알림 엔티티가 생성되고 알림 이벤트가 발생한다.")
     void notifyNew() {
 
+        //given
+        Notification notification = new Notification();
+        when(memberService.findByUsername(anyString())).thenReturn(Optional.of(requester));
+        when(notificationRepository.save(any(Notification.class))).thenReturn(notification);
+
         //when
-        Notification notification = notificationService.notifyNew(requester, helper);
+        notificationService.notifyNew(requester, helper);
 
         //then
-        long 채팅시작_알림_이벤트_카운트 = events.stream(NotifyNewMessageEvent.class).count();
-        long 거래완료_알림_이벤트_카운트 = events.stream(NotifyEndMessageEvent.class).count();
-        long 거래파기_알림_이벤트_카운트 = events.stream(NotifyCancelMessageEvent.class).count();
-
-        assertAll(
-                () -> assertThat(채팅시작_알림_이벤트_카운트).isEqualTo(1L),
-                () -> assertThat(거래완료_알림_이벤트_카운트).isEqualTo(0L),
-                () -> assertThat(거래파기_알림_이벤트_카운트).isEqualTo(0L)
-        );
-
-
-        assertAll(
-                () -> assertThat(notification.getMessage()).isEqualTo("채팅시작테스트"),
-                () -> assertThat(notification.getHelper()).isEqualTo(helper),
-                () -> assertThat(notification.getRequester()).isEqualTo(requester)
-        );
-
+        verify(publisher, times(1)).publishEvent(any(NotifyNewMessageEvent.class));
     }
 
     @Test
     @DisplayName("거래를 완료하면 알림 엔티티가 생성되고 알림 이벤트가 발생한다.")
     void notifyEnd() {
 
+        //given
+        Notification notification = new Notification();
+        when(memberService.findByUsername(anyString())).thenReturn(Optional.of(requester));
+        when(notificationRepository.save(any(Notification.class))).thenReturn(notification);
+
         //when
-        Notification notification = notificationService.notifyEnd(requester, helper);
+        notificationService.notifyEnd(requester, helper);
 
         //then
-        long 채팅시작_알림_이벤트_카운트 = events.stream(NotifyNewMessageEvent.class).count();
-        long 거래완료_알림_이벤트_카운트 = events.stream(NotifyEndMessageEvent.class).count();
-        long 거래파기_알림_이벤트_카운트 = events.stream(NotifyCancelMessageEvent.class).count();
+        verify(publisher, times(1)).publishEvent(any(NotifyEndMessageEvent.class));
 
-        assertAll(
-                () -> assertThat(채팅시작_알림_이벤트_카운트).isEqualTo(0L),
-                () -> assertThat(거래완료_알림_이벤트_카운트).isEqualTo(1L),
-                () -> assertThat(거래파기_알림_이벤트_카운트).isEqualTo(0L)
-        );
-
-
-        assertAll(
-                () -> assertThat(notification.getMessage()).isEqualTo("거래완료테스트"),
-                () -> assertThat(notification.getHelper()).isEqualTo(helper),
-                () -> assertThat(notification.getRequester()).isEqualTo(requester)
-        );
 
     }
 
@@ -118,27 +98,16 @@ class NotificationServiceTest {
     @DisplayName("거래를 파기하면 알림 엔티티가 생성되고 알림 이벤트가 발생한다.")
     void notifyCancel() {
 
+        //given
+        Notification notification = new Notification();
+        when(memberService.findByUsername(anyString())).thenReturn(Optional.of(requester));
+        when(notificationRepository.save(any(Notification.class))).thenReturn(notification);
+
         //when
-        Notification notification = notificationService.notifyCancel(requester, helper);
+        notification = notificationService.notifyCancel(requester, helper);
 
         //then
-        long 채팅시작_알림_이벤트_카운트 = events.stream(NotifyNewMessageEvent.class).count();
-        long 거래완료_알림_이벤트_카운트 = events.stream(NotifyEndMessageEvent.class).count();
-        long 거래파기_알림_이벤트_카운트 = events.stream(NotifyCancelMessageEvent.class).count();
-
-        assertAll(
-                () -> assertThat(채팅시작_알림_이벤트_카운트).isEqualTo(0L),
-                () -> assertThat(거래완료_알림_이벤트_카운트).isEqualTo(0L),
-                () -> assertThat(거래파기_알림_이벤트_카운트).isEqualTo(1L)
-        );
-
-
-        assertAll(
-                () -> assertThat(notification.getMessage()).isEqualTo("거래파기테스트"),
-                () -> assertThat(notification.getHelper()).isEqualTo(helper),
-                () -> assertThat(notification.getRequester()).isEqualTo(requester)
-        );
-
+        verify(publisher, times(1)).publishEvent(any(NotifyCancelMessageEvent.class));
     }
 
 
@@ -147,9 +116,8 @@ class NotificationServiceTest {
     void findNotificationList_MemberNotExists() {
 
         //given
-        String username = "bigsand";
+        String username = "not_exist_member";
 
-        when(memberService.findByUsername(username)).thenReturn(Optional.empty());
 
         //when
         RsData<List<Notification>> notificationRsData = notificationService.findNotificationList(username);
@@ -169,27 +137,23 @@ class NotificationServiceTest {
     @DisplayName("멤버가 null이 아닐 때 알림 목록을 조회할 수 있다.")
     void findNotificationList_MemberExists() {
 
-        //given
-        String username = "손승완";
+        // given
         String message = "첫번째알림메시지";
+        String type = "START";
 
-        when(memberService.findByUsername(username)).thenReturn(Optional.of(requester));
-        when(notificationRepository.findAllByMemberId(requester.getId())).thenReturn(List.of(new Notification(message, NotifyType.START, requester, helper)));
+        Notification notification = Notification.create(message, type, requester, helper);
+        when(notificationRepository.findAllByMemberId(anyLong())).thenReturn(Collections.singletonList(notification));
+        when(memberService.findByUsername(anyString())).thenReturn(Optional.of(requester));
 
-        //when
-        RsData<List<Notification>> notificationRsData = notificationService.findNotificationList(requester.getUsername());
+        // when
+        RsData<List<Notification>> rsData = notificationService.findNotificationList(requester.getUsername());
 
-
-        //then
+        // then
         assertAll(
-                () -> assertThat(notificationRsData.getResultCode()).isEqualTo("S_N-1"),
-                () -> assertThat(notificationRsData.getMsg()).isEqualTo("알림목록페이지로 이동합니다."),
-                () -> assertThat(notificationRsData.getData().size()).isEqualTo(1),
-                () -> assertThat(notificationRsData.getData().get(0).getMessage()).isEqualTo("첫번째알림메시지")
+                () -> assertThat(rsData.getResultCode()).isEqualTo("S_N-1"),
+                () -> assertThat(rsData.getMsg()).isEqualTo("알림목록페이지로 이동합니다."),
+                () -> assertThat(rsData.getData().get(0).getMessage()).isEqualTo("첫번째알림메시지")
         );
-
-
-
     }
 
 }
